# dioxus-form-from-zero

./: Cargo.toml  README.md
assets/: style.css
src/: auth.rs  home.rs  main.rs
