[package]
name = "form-from-zero"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { version = "0.7.1", features = ["fullstack"] }
dioxus-router = "0.7.1"
serde = "1.0.228"
web-sys = { version = "0.3", features = ["console"] }

[features]
default = ["web", "server"]
web = ["dioxus/web"]
server = ["dioxus/server"]